mito-ai: fix buttons do not wrap

--- a/mito-ai/style/TextAndIconButton.css
+++ b/mito-ai/style/TextAndIconButton.css
@@ -10,8 +10,8 @@
     font-size: 14px;
 
     /* Make sure the button grows large enough so that the text does not wrap */
-    min-width: 100px;
     width: fit-content;
+    white-space: nowrap;
 }
 
 .text-and-icon-button__icon {
